# todo-rust-htmx

./: Cargo.toml  README.md
src/: main.rs  todos_hx.rs
src/public/: index.html
