[package]
name = "todo-rust-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4"
html-to-string-macro = "0.2.5"
serde = {version = "1.0.183", features = ["derive"]}
